slider html structure changed

--- a/app/crossgroup.html
+++ b/app/crossgroup.html
@@ -1783,7 +1783,248 @@
 			<div class="row">
 				<div class="col-12">
 					<h2>Вы недавно смотрели</h2>
-					<ul class="card__details_wrap cars_slider">
+					<!-- <ul class="card__details_wrap cars_slider">
+						<li class="card__details_item">
+							<div class="card__details">
+								<div class="card__details_img">
+									<img src="img/product.jpg" alt="">
+									<div class="card__details_price">
+										<span class="card__details_num">
+											от
+											<span>211 980 ₽</span>
+										</span>
+										<p>В наличии 164 шт.</p>
+									</div>
+								</div>
+								<span class="card__details_title">
+									Амортизатор замка
+								</span>
+								<ul class="card__details_list">
+									<li>
+										<span class="card__details_item_title">DAF</span>
+										<span class="card__details_item_dots"></span>
+										<span>55lf, 95xf, cf</span>
+									</li>
+									<li>
+										<span class="card__details_item_title">MAN</span>
+										<span class="card__details_item_dots"></span>
+										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
+									</li>
+								</ul>
+								<div class="category__details__btn_wrap">
+									<a href="#" class="card__details_btn">
+										Посмотреть
+									</a>
+								</div>
+							</div>
+						</li>
+						<li class="card__details_item">
+							<div class="card__details">
+								<div class="card__details_img">
+									<img src="img/product.jpg" alt="">
+									<div class="card__details_price">
+										<span class="card__details_num">
+											от
+											<span>211 980 ₽</span>
+										</span>
+										<p>В наличии 164 шт.</p>
+									</div>
+								</div>
+								<span class="card__details_title">
+									Амортизатор замка двери
+								</span>
+								<ul class="card__details_list">
+									<li>
+										<span class="card__details_item_title">DAF</span>
+										<span class="card__details_item_dots"></span>
+										<span>55lf, 95xf, cf</span>
+									</li>
+									<li>
+										<span class="card__details_item_title">MAN</span>
+										<span class="card__details_item_dots"></span>
+										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
+									</li>
+								</ul>
+								<div class="category__details__btn_wrap">
+									<a href="#" class="card__details_btn">
+										Посмотреть
+									</a>
+								</div>
+							</div>
+						</li>
+						<li class="card__details_item">
+							<div class="card__details">
+								<div class="card__details_img">
+									<img src="img/product.jpg" alt="">
+									<div class="card__details_price">
+										<span class="card__details_num">
+											от
+											<span>211 980 ₽</span>
+										</span>
+										<p>В наличии 164 шт.</p>
+									</div>
+								</div>
+								<span class="card__details_title">
+									Амортизатор замка двери
+								</span>
+								<ul class="card__details_list">
+									<li>
+										<span class="card__details_item_title">DAF</span>
+										<span class="card__details_item_dots"></span>
+										<span>55lf, 95xf, cf</span>
+									</li>
+									<li>
+										<span class="card__details_item_title">MAN</span>
+										<span class="card__details_item_dots"></span>
+										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
+									</li>
+								</ul>
+								<div class="category__details__btn_wrap">
+									<a href="#" class="card__details_btn">
+										Посмотреть
+									</a>
+								</div>
+							</div>
+						</li>
+						<li class="card__details_item">
+							<div class="card__details">
+								<div class="card__details_img">
+									<img src="img/product.jpg" alt="">
+									<div class="card__details_price">
+										<span class="card__details_num">
+											от
+											<span>211 980 ₽</span>
+										</span>
+										<p>В наличии 164 шт.</p>
+									</div>
+								</div>
+								<span class="card__details_title">
+									Амортизатор замка двери
+								</span>
+								<ul class="card__details_list">
+									<li>
+										<span class="card__details_item_title">DAF</span>
+										<span class="card__details_item_dots"></span>
+										<span>55lf, 95xf, cf</span>
+									</li>
+									<li>
+										<span class="card__details_item_title">MAN</span>
+										<span class="card__details_item_dots"></span>
+										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
+									</li>
+								</ul>
+								<div class="category__details__btn_wrap">
+									<a href="#" class="card__details_btn">
+										Посмотреть
+									</a>
+								</div>
+							</div>
+						</li>
+						<li class="card__details_item">
+							<div class="card__details">
+								<div class="card__details_img">
+									<img src="img/product.jpg" alt="">
+									<div class="card__details_price">
+										<span class="card__details_num">
+											от
+											<span>211 980 ₽</span>
+										</span>
+										<p>В наличии 164 шт.</p>
+									</div>
+								</div>
+								<span class="card__details_title">
+									Амортизатор замка двери
+								</span>
+								<ul class="card__details_list">
+									<li>
+										<span class="card__details_item_title">DAF</span>
+										<span class="card__details_item_dots"></span>
+										<span>55lf, 95xf, cf</span>
+									</li>
+									<li>
+										<span class="card__details_item_title">MAN</span>
+										<span class="card__details_item_dots"></span>
+										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
+									</li>
+								</ul>
+								<div class="category__details__btn_wrap">
+									<a href="#" class="card__details_btn">
+										Посмотреть
+									</a>
+								</div>
+							</div>
+						</li>
+						<li class="card__details_item">
+							<div class="card__details">
+								<div class="card__details_img">
+									<img src="img/product.jpg" alt="">
+									<div class="card__details_price">
+										<span class="card__details_num">
+											от
+											<span>211 980 ₽</span>
+										</span>
+										<p>В наличии 164 шт.</p>
+									</div>
+								</div>
+								<span class="card__details_title">
+									Амортизатор замка двери
+								</span>
+								<ul class="card__details_list">
+									<li>
+										<span class="card__details_item_title">DAF</span>
+										<span class="card__details_item_dots"></span>
+										<span>55lf, 95xf, cf</span>
+									</li>
+									<li>
+										<span class="card__details_item_title">MAN</span>
+										<span class="card__details_item_dots"></span>
+										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
+									</li>
+								</ul>
+								<div class="category__details__btn_wrap">
+									<a href="#" class="card__details_btn">
+										Посмотреть
+									</a>
+								</div>
+							</div>
+						</li>
+						<li class="card__details_item">
+							<div class="card__details">
+								<div class="card__details_img">
+									<img src="img/product.jpg" alt="">
+									<div class="card__details_price">
+										<span class="card__details_num">
+											от
+											<span>211 980 ₽</span>
+										</span>
+										<p>В наличии 164 шт.</p>
+									</div>
+								</div>
+								<span class="card__details_title">
+									Амортизатор замка двери
+								</span>
+								<ul class="card__details_list">
+									<li>
+										<span class="card__details_item_title">DAF</span>
+										<span class="card__details_item_dots"></span>
+										<span>55lf, 95xf, cf</span>
+									</li>
+									<li>
+										<span class="card__details_item_title">MAN</span>
+										<span class="card__details_item_dots"></span>
+										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
+									</li>
+								</ul>
+								<div class="category__details__btn_wrap">
+									<a href="#" class="card__details_btn">
+										Посмотреть
+									</a>
+								</div>
+							</div>
+						</li>
+					</ul> -->
+
+					<ul class="slider-cg">
 						<li class="card__details_item">
 							<div class="card__details">
 								<div class="card__details_img">
