--- a/app/crossgroup.html
+++ b/app/crossgroup.html
@@ -223,7 +223,7 @@
 
 
 		<!--  -->
-		<div class="global-wrapper">
+		<div class="global-wrapper overflow-hidden cross p-0">
 			<header class="header" id="header">
 				<div class="header__tel">
 					<div class="container">
@@ -1092,7 +1092,7 @@
 			</header>
 
 	<main>
-		<section class="cross" id="category">
+		<section id="category cross">
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
@@ -1781,250 +1781,9 @@
 	<section class="recently" id="recently">
 		<div class="container">
 			<div class="row">
-				<div class="col-12">
+				<div class="col-12 p-0">
 					<h2>Вы недавно смотрели</h2>
-					<!-- <ul class="card__details_wrap cars_slider">
-						<li class="card__details_item">
-							<div class="card__details">
-								<div class="card__details_img">
-									<img src="img/product.jpg" alt="">
-									<div class="card__details_price">
-										<span class="card__details_num">
-											от
-											<span>211 980 ₽</span>
-										</span>
-										<p>В наличии 164 шт.</p>
-									</div>
-								</div>
-								<span class="card__details_title">
-									Амортизатор замка
-								</span>
-								<ul class="card__details_list">
-									<li>
-										<span class="card__details_item_title">DAF</span>
-										<span class="card__details_item_dots"></span>
-										<span>55lf, 95xf, cf</span>
-									</li>
-									<li>
-										<span class="card__details_item_title">MAN</span>
-										<span class="card__details_item_dots"></span>
-										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
-									</li>
-								</ul>
-								<div class="category__details__btn_wrap">
-									<a href="#" class="card__details_btn">
-										Посмотреть
-									</a>
-								</div>
-							</div>
-						</li>
-						<li class="card__details_item">
-							<div class="card__details">
-								<div class="card__details_img">
-									<img src="img/product.jpg" alt="">
-									<div class="card__details_price">
-										<span class="card__details_num">
-											от
-											<span>211 980 ₽</span>
-										</span>
-										<p>В наличии 164 шт.</p>
-									</div>
-								</div>
-								<span class="card__details_title">
-									Амортизатор замка двери
-								</span>
-								<ul class="card__details_list">
-									<li>
-										<span class="card__details_item_title">DAF</span>
-										<span class="card__details_item_dots"></span>
-										<span>55lf, 95xf, cf</span>
-									</li>
-									<li>
-										<span class="card__details_item_title">MAN</span>
-										<span class="card__details_item_dots"></span>
-										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
-									</li>
-								</ul>
-								<div class="category__details__btn_wrap">
-									<a href="#" class="card__details_btn">
-										Посмотреть
-									</a>
-								</div>
-							</div>
-						</li>
-						<li class="card__details_item">
-							<div class="card__details">
-								<div class="card__details_img">
-									<img src="img/product.jpg" alt="">
-									<div class="card__details_price">
-										<span class="card__details_num">
-											от
-											<span>211 980 ₽</span>
-										</span>
-										<p>В наличии 164 шт.</p>
-									</div>
-								</div>
-								<span class="card__details_title">
-									Амортизатор замка двери
-								</span>
-								<ul class="card__details_list">
-									<li>
-										<span class="card__details_item_title">DAF</span>
-										<span class="card__details_item_dots"></span>
-										<span>55lf, 95xf, cf</span>
-									</li>
-									<li>
-										<span class="card__details_item_title">MAN</span>
-										<span class="card__details_item_dots"></span>
-										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
-									</li>
-								</ul>
-								<div class="category__details__btn_wrap">
-									<a href="#" class="card__details_btn">
-										Посмотреть
-									</a>
-								</div>
-							</div>
-						</li>
-						<li class="card__details_item">
-							<div class="card__details">
-								<div class="card__details_img">
-									<img src="img/product.jpg" alt="">
-									<div class="card__details_price">
-										<span class="card__details_num">
-											от
-											<span>211 980 ₽</span>
-										</span>
-										<p>В наличии 164 шт.</p>
-									</div>
-								</div>
-								<span class="card__details_title">
-									Амортизатор замка двери
-								</span>
-								<ul class="card__details_list">
-									<li>
-										<span class="card__details_item_title">DAF</span>
-										<span class="card__details_item_dots"></span>
-										<span>55lf, 95xf, cf</span>
-									</li>
-									<li>
-										<span class="card__details_item_title">MAN</span>
-										<span class="card__details_item_dots"></span>
-										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
-									</li>
-								</ul>
-								<div class="category__details__btn_wrap">
-									<a href="#" class="card__details_btn">
-										Посмотреть
-									</a>
-								</div>
-							</div>
-						</li>
-						<li class="card__details_item">
-							<div class="card__details">
-								<div class="card__details_img">
-									<img src="img/product.jpg" alt="">
-									<div class="card__details_price">
-										<span class="card__details_num">
-											от
-											<span>211 980 ₽</span>
-										</span>
-										<p>В наличии 164 шт.</p>
-									</div>
-								</div>
-								<span class="card__details_title">
-									Амортизатор замка двери
-								</span>
-								<ul class="card__details_list">
-									<li>
-										<span class="card__details_item_title">DAF</span>
-										<span class="card__details_item_dots"></span>
-										<span>55lf, 95xf, cf</span>
-									</li>
-									<li>
-										<span class="card__details_item_title">MAN</span>
-										<span class="card__details_item_dots"></span>
-										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
-									</li>
-								</ul>
-								<div class="category__details__btn_wrap">
-									<a href="#" class="card__details_btn">
-										Посмотреть
-									</a>
-								</div>
-							</div>
-						</li>
-						<li class="card__details_item">
-							<div class="card__details">
-								<div class="card__details_img">
-									<img src="img/product.jpg" alt="">
-									<div class="card__details_price">
-										<span class="card__details_num">
-											от
-											<span>211 980 ₽</span>
-										</span>
-										<p>В наличии 164 шт.</p>
-									</div>
-								</div>
-								<span class="card__details_title">
-									Амортизатор замка двери
-								</span>
-								<ul class="card__details_list">
-									<li>
-										<span class="card__details_item_title">DAF</span>
-										<span class="card__details_item_dots"></span>
-										<span>55lf, 95xf, cf</span>
-									</li>
-									<li>
-										<span class="card__details_item_title">MAN</span>
-										<span class="card__details_item_dots"></span>
-										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
-									</li>
-								</ul>
-								<div class="category__details__btn_wrap">
-									<a href="#" class="card__details_btn">
-										Посмотреть
-									</a>
-								</div>
-							</div>
-						</li>
-						<li class="card__details_item">
-							<div class="card__details">
-								<div class="card__details_img">
-									<img src="img/product.jpg" alt="">
-									<div class="card__details_price">
-										<span class="card__details_num">
-											от
-											<span>211 980 ₽</span>
-										</span>
-										<p>В наличии 164 шт.</p>
-									</div>
-								</div>
-								<span class="card__details_title">
-									Амортизатор замка двери
-								</span>
-								<ul class="card__details_list">
-									<li>
-										<span class="card__details_item_title">DAF</span>
-										<span class="card__details_item_dots"></span>
-										<span>55lf, 95xf, cf</span>
-									</li>
-									<li>
-										<span class="card__details_item_title">MAN</span>
-										<span class="card__details_item_dots"></span>
-										<span>ACTROS MPI, ACTROS MPII, ACTROS MPIII, ATEGO MPI</span>
-									</li>
-								</ul>
-								<div class="category__details__btn_wrap">
-									<a href="#" class="card__details_btn">
-										Посмотреть
-									</a>
-								</div>
-							</div>
-						</li>
-					</ul> -->
-
-					<ul class="slider-cg">
+					<ul class="card__details_wrap cars_slider text-center">
 						<li class="card__details_item">
 							<div class="card__details">
 								<div class="card__details_img">
@@ -2264,6 +2023,10 @@
 							</div>
 						</li>
 					</ul>
+					<!--  -->
+
+					<!--  -->
+
 				</div>
 			</div>
 		</div>
